# trigno_simd_cpp

./: .gitignore  CITATION.bib  CMakeLists.txt  LICENSE  README.md
Implementation_cpp/: Integrated_Trigno_SIMD.cpp  angle_reduction.h  mytan.csv  mytrigno.cpp  mytrigno.h  taylorsimd.cpp  taylorsin5.csv  taylorsin7.csv  taylorsin9.csv  taylortan5.csv
Vitis_hls_code/Vitis_hls_functions/: myfunc_sin_SIMD.cpp  myfunc_tan_SIMD.cpp  taylor_cos_SIMD.cpp  taylor_sin_SIMD.cpp  testbench_myfunc_cos_SIMD.cpp  testbench_myfunc_sin_SIMD.cpp
Vitis_hls_reports/report_ myfunc_cos_SIMD/: csynth.rpt  csynth_design_size.xml
Vitis_hls_reports/report_cos_inbuilt/: csynth.rpt  csynth_design_size.rpt  csynth_design_size.xml  sin_or_cos_double_Pipeline_1_csynth.xml  sin_or_cos_double_Pipeline_2_csynth.rpt  sin_or_cos_double_Pipeline_3_csynth.rpt
data/: cordic_cos.csv  cordic_sin.csv  cordic_tan.csv  proposed_cos.csv  proposed_sin.csv  proposed_tan.csv  taylorcos5.csv  taylorcos7.csv  taylorcos9.csv  taylorsin5.csv  taylorsin7.csv  taylorsin9.csv  taylortan5.csv  taylortan7.csv  taylortan9.csv
implementation_cpp/: benchmark.cpp  maintrigno.cpp  mytrigno.h  proposed_trigno.cpp  proposed_trigno.h  taylorcos5.csv
include/: angle_reduction.h  cordic_trig.h  proposed_trigno.h  taylorsimd.h
src/: angle_reduction.cpp  benchmark.cpp  cordic_trig.cpp  proposed_trigno.cpp  taylorsimd.cpp
vitis_hls_code/: proposed_cos_SIMD.cpp  taylor_tan_SIMD.cpp  testbench_myfunc_tan_SIMD.cpp  testbench_taylor_cos_SIMD.cpp  testbench_taylor_sin_SIMD.cpp  testbench_taylor_tan_SIMD.cpp
(+74 files in other folders)
